--- a/tools/style-common.css
+++ b/tools/style-common.css
@@ -341,14 +341,8 @@ td {
   vertical-align: text-top; }
 
 sup {
-  /* override the default styling */
-  font-size: 100%;
-  vertical-align: baseline;
-
-  /* font-variant-position: super; is currently supported only in
-     firefox, so we need to explicitly invoke the sups feature. */
-  font-feature-settings: "sups";
- 
+  /* font-size: .83em; 
+     vertical-align: super; */
   line-height: 0;
   font-variant-numeric: lining-nums; }
 
