--- a/tools/style-common.css
+++ b/tools/style-common.css
@@ -170,8 +170,10 @@ b {
   text-align: left;
   text-indent: 0; }
 
-
-
+.l_c {
+  text-align: center; 
+  text-idnent:0; }
+  
 .l0 {
   text-indent: 0;
   padding: 0 3em 0 0;
