--- a/tools/style-common.css
+++ b/tools/style-common.css
@@ -352,6 +352,12 @@ sup {
   line-height: 0;
   font-variant-numeric: lining-nums; }
 
+sub {
+  /* font-size: .83em; 
+     vertical-align: sub; */
+  line-height: 0;
+  font-variant-numeric: lining-nums; }
+
 
 
 .date {
