--- a/tools/style-common.css
+++ b/tools/style-common.css
@@ -351,15 +351,15 @@ td {
   vertical-align: text-top; }
 
 sup {
-  font-size: .83em;
   vertical-align: super;
   line-height: 0;
+  font-size: 0.7em;
   font-variant-numeric: lining-nums; }
 
 sub {
-  font-size: .83em;
   vertical-align: sub;
   line-height: 0;
+  font-size: 0.7em;
   font-variant-numeric: lining-nums; }
 
 
