--- a/tools/style-common.css
+++ b/tools/style-common.css
@@ -26,7 +26,7 @@ h1,  .page-titre-auteur, .page-titre-titre {
   page-break-after: avoid; }
 
 h1 + h1 {
-  margin: -2em 0 3em 0; }
+  margin-top: -2em; }
 
 h2, .page-titre-surtitre, .page-titre-soustitre, .page-titre-editeur, page-titre-article {
   padding: 0;
@@ -39,7 +39,7 @@ h2, .page-titre-surtitre, .page-titre-soustitre, .page-titre-editeur, page-titre
   page-break-after: avoid; }
 
 h2 + h2 {
-  margin: -1em 0 2em 0; }
+  margin-top: -1em; }
 
 h3 {
   padding: 0;
@@ -51,7 +51,7 @@ h3 {
   page-break-after: avoid; }
 
 h3 + h3 {
-  margin: 1em 0 1em 0; }
+  margin-top: 1em; }
 
 h4 {
   padding: 0;
