--- a/tools/style-common.css
+++ b/tools/style-common.css
@@ -32,7 +32,7 @@ h1,  .page-titre-auteur, .page-titre-titre {
 h1 + h1 {
   margin-top: -2em; }
 
-h2, .page-titre-surtitre, .page-titre-soustitre, .page-titre-editeur, page-titre-article {
+h2, .page-titre-surtitre, .page-titre-soustitre, .page-titre-editeur, page-titre-article, .colophon-titre {
   padding: 0;
   margin: 2em 0 2em 0;
   text-align: center;
@@ -123,18 +123,15 @@ a {
 
 
 .r {
-  font-weight: normal;
   font-style: normal;
   font-variant-caps: normal; }
 
 i {
-  font-weight: normal;
   font-style: italic;
   font-variant-caps: normal; }
 
 b {
   font-weight: bold;
-  font-style: normal;
   font-variant-caps: normal; }
 
 .smcp {
