--- a/tools/style-common.css
+++ b/tools/style-common.css
@@ -272,7 +272,7 @@ blockquote {
   width: 100%;
   text-align: center;
   break-before: always;
-  break-after: alwways;
+  break-after: always;
   break-inside: avoid;
   page-break-before: always;
   page-break-after: always;
